@@ -41,6 +41,9 @@
 
 \newenvironment{isaantiq}{{\isacharat\isacharbraceleft}}{{\isacharbraceright}}
 
+\newcommand{\isamarkupcancel}[1]{\xout{#1}}  %requires \usepackage[normalem]{ulem}
+%OR: \newcommand{\isamarkupcancel}[1]{{\color{gray}{\isacharverbatimopen}#1{\isacharverbatimclose}}}  %requires \usepackage{xcolor}
+
 \newdimen\isa@parindent\newdimen\isa@parskip
 
 \newenvironment{isabellebody}{%
