@@ -16,6 +16,7 @@ sig
   val space: symbol
   val is_space: symbol -> bool
   val comment: symbol
+  val cancel: symbol
   val is_char: symbol -> bool
   val is_utf8: symbol -> bool
   val is_symbolic: symbol -> bool
@@ -107,6 +108,7 @@ in
 end;
 
 val comment = "\<comment>";
+val cancel = "\<^cancel>";
 
 fun is_char s = size s = 1;
 
